crates/bind/tests/compile_fail/trigger_not_into.stderr
error[E0277]: the trait bound `Trig: From<Weird>` is not satisfied
  --> tests/compile_fail/trigger_not_into.rs:40:8
   |
37 | #[derive(Laserbeam, Bind)]
   |                     ---- required by a bound introduced by this call
...
40 | #[bind(Weird => handler)]
   |        ^^^^^ unsatisfied trait bound
   |
help: the trait `From<Weird>` is not implemented for `Trig`
  --> tests/compile_fail/trigger_not_into.rs:8:1
   |
 8 | struct Trig;
   | ^^^^^^^^^^^
   = note: required for `Weird` to implement `Into<Trig>`
